#
# if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
#

TAG: pwi-6-0-25-2
DATE: 03/20/2025
STAFF: lec
wts2-1630/e4g-194/GXD Assay Module Results note
        modified:   pwi/static/app/edit/assay/AssayController.js

TAG: pwi-6-0-25-1
DATE: 03/12/2025
STAFF: lec
wts2-1392/e4g-155/ENSEMBL Regulatory 113
#	pwi/static/app/controllers/PageController.js

TAG: pwi-6-0-24-15
DATE: 12/09/2024
STAFF: lec
PWI_LOGDIR	/data/pwi/logs
PWI_SERVER_PORT         5000
#	modified:   Configuration.default

TAG: pwi-6-0-24-14
TAG: pwi-6-0-24-13
DATE: 11/04/2024
STAFF: lec
wts2-1539/e4g-57/GXD RNA-Seq Type/Schema/Migration
wts2-1573/e4g-61/lit triage module: striping of table

TAG: pwi-6-0-24-12
TAG: pwi-6-0-24-11
TAG: pwi-6-0-24-10
TAG: pwi-6-0-24-9
DATE: 10/25/2024
STAFF: lec
wts2-1565/e4g-39/GXD HT: Missing PMIDs

TAG: pwi-6-0-24-8
TAG: pwi-6-0-24-7
TAG: pwi-6-0-24-6
TAG: pwi-6-0-24-5
TAG: pwi-6-0-24-4
DATE: 10/06/2024
STAFF: lec
wts2-419/Regulatory region and cluster member to marker relationship (TR12804)

TAG: pwi-6-0-24-3
DATE: 09/27/2024
STAFF: lec
wts2-1554/e4g-10/move PWI/API products to APP servers

TAG: pwi-6-0-24-2
DATE: 09/16/2024
STAFF: lec
wts2-1549/fl2-968/adding sequence ontology term 36 matrix_attachment_site to Feature Type menu in Marker module

TAG: pwi-6-0-24-1
DATE: 08/30/2024
STAFF: lec
wts2-1542/fl2-962/Include Figure panes in Duplicate All/Partial for Blots in GXD Assay module

TAG: pwi-6-0-23-22
DATE: 05/14/2024
STAFF: lec
wts2-1472/fl2-857/Helper tool to add strain and allele associations to lit triage record

TAG: pwi-6-0-23-21
TAG: pwi-6-0-23-20
DATE: 05/03/2024
STAFF: lec
wts2-1410/fl2-853/Allele search result sorting tweak

TAG: pwi-6-0-23-19
DATE: 04/08/2024
STAFF: lec
wts2-1456/fl2-818/Add Duplicate Note logic to PWI/Genotype module

TAG: pwi-6-0-23-18
DATE: 03/14/2024
STAFF: lec
wts2-1439/fl2-784/HT/remove Raw Sample Count from PWI & QC
undo:
wts2-1368/fl2-724/HT index module: display raw sample count

TAG: pwi-6-0-23-17