@@ -342,8 +342,12 @@
 
                         <tfoot>
                         <tr>
-			<button type="button" style="float:left;" tabindex="-1" id="autoPrimerNameButton" ng-class=""
-				ng-click="autoPrimerName()" >Autopopulate Primer Name</button>
+			<button type="button" style="float:left;" tabindex="-1" id="autoDNAButton" ng-class=""
+				ng-click="autoDNA()" >Autopopulate cDNA</button>
+			<button type="button" style="float:left;" tabindex="-1" id="autoNSButton" ng-class=""
+				ng-click="autoNS()" >Autopopulate Not Specified</button>
+			<button type="button" style="float:left;" tabindex="-1" id="autoPrimerButton" ng-class=""
+				ng-click="autoPrimer()" >Autopopulate Primer</button>
 			<button type="button" style="float:right;" tabindex="-1" id="addMarkerButton" ng-class=""
 				ng-click="addMarkerRow(vm.selectedMarkerIndex)" >Add Marker Row</button>
                         </tr>
