@@ -2,6 +2,13 @@
 # if Install hangs, then remove folder:  /home/mgiadmin/.cache/pip and try again
 #
 
+TAG: pwi-6-0-25-3
+DATE: 04/03/2025
+STAFF: lec
+wts2-1639/e4g-209/P-WI - Autopopulate buttons in Probes Module
+        modified:   pwi/static/app/edit/probe/ProbeController.js
+        modified:   pwi/static/app/edit/probe/probe_content.html
+
 TAG: pwi-6-0-25-2
 DATE: 03/20/2025
 STAFF: lec
